--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1278,16 +1278,17 @@ section:nth-child(8)>h1{
 
 /*--------------------------------------footer-------------------------------------------------*/
 
-body footer{
+body footer>div{
+    position: relative;
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     padding-left: 5vw;
     padding-right: 5vw;
     box-sizing: border-box;
-    background-color: black;
+    background-color: #2D2D32;
 }
 
-body footer section>div:nth-child(1)>h1{
+body footer div>div:nth-child(1)>h1{
     color: #ffffff;
     font-family: 'Catamaran';
     font-size: 1.5em;
@@ -1297,10 +1298,10 @@ body footer section>div:nth-child(1)>h1{
     position: absolute;
     margin: auto;
     left: 15vh;
-    top: 1030vh;
+    top: 7vh;
 }
 
-body footer section>div:nth-child(1)>p{
+body footer div>div:nth-child(1)>p{
     color: #FFF;
     width: 30vh;
     font-family: Inter, cursive;
@@ -1310,25 +1311,25 @@ body footer section>div:nth-child(1)>p{
     line-height: normal;
     margin: auto;
     position: absolute;
-    top: 1037vh;
+    top: 15vh;
     left: 15vh;
 }
 
-body footer section>div:nth-child(1)>img{
+body footer div>div:nth-child(1)>img{
     position: absolute;
-    top: 1053vh;
+    top: 30vh;
     left: 20vh;
 }
 
-body footer section>div:nth-child(1)>hr{
+body footer div>div:nth-child(1)>hr{
     position: absolute;
     width: 0.001vh;
     height: 45vh;
-    top: 1025vh;
-    left: 73.3vh;
+    top: 6vh;
+    left: 32.7vw;
 }
 
-body footer section>div:nth-child(2)>h1{
+body footer div>div:nth-child(2)>h1{
     color: #ffffff;
     font-family: 'Catamaran';
     font-size: 1.5em;
@@ -1337,95 +1338,95 @@ body footer section>div:nth-child(2)>h1{
     line-height: normal;
     position: absolute;
     margin: auto;
-    left: 95vh;
-    top: 1030vh;
+    left: 43vw;
+    top: 7vh;
 }
 
-body footer section>div:nth-child(2)>div>img:nth-child(1){
+body footer div>div:nth-child(2)>div>img:nth-child(1){
     position: absolute;
-    top: 1037vh;
-    left: 95vh;
+    top: 15vh;
+    left: 43vw;
 }
 
 
-body footer section>div:nth-child(2)>div>img:nth-child(2){
+body footer div>div:nth-child(2)>div>img:nth-child(2){
     position: absolute;
-    top: 1044vh;
-    left: 95vh;
+    top: 23vh;
+    left: 43vw;
 }
 
-body footer section>div:nth-child(2)>div>img:nth-child(3){
+body footer div>div:nth-child(2)>div>img:nth-child(3){
     position: absolute;
-    top: 1051vh;
-    left: 95vh;
+    top: 31vh;
+    left: 43vw;
 }
 
-body footer section>div:nth-child(2)>div>img:nth-child(4){
+body footer div>div:nth-child(2)>div>img:nth-child(4){
     position: absolute;
-    top: 1058vh;
-    left: 95vh;
+    top: 39vh;
+    left: 43vw;
 }
 
-body footer section>div:nth-child(2)>div>img:nth-child(5){
+body footer div>div:nth-child(2)>div>img:nth-child(5){
     position: absolute;
-    top: 1065vh;
-    left: 95vh;
+    top: 47vh;
+    left: 43vw;
 }
 
-body footer section>div:nth-child(2)>nav>ul>li:nth-child(1){
-    position: absolute;
-    color: #494949;
-    font-family: Inter;
-    font-size: 20px;
-    top: 1037.5vh;
-    left: 109vh;
-}
-
-body footer section>div:nth-child(2)>nav>ul>li:nth-child(2){
+body footer div>div:nth-child(2)>nav>ul>li:nth-child(1){
     position: absolute;
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1044.5vh;
-    left: 109vh;
+    top: 15.5vh;
+    left: 49vw;
 }
 
-body footer section>div:nth-child(2)>nav>ul>li:nth-child(3){
+body footer div>div:nth-child(2)>nav>ul>li:nth-child(2){
     position: absolute;
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1051.5vh;
-    left: 109vh;
+    top: 23.5vh;
+    left: 49vw;
 }
 
-body footer section>div:nth-child(2)>nav>ul>li:nth-child(4){
+body footer div>div:nth-child(2)>nav>ul>li:nth-child(3){
     position: absolute;
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1058.5vh;
-    left: 109vh;
+    top: 31.5vh;
+    left: 49vw;
 }
 
-body footer section>div:nth-child(2)>nav>ul>li:nth-child(5){
+body footer div>div:nth-child(2)>nav>ul>li:nth-child(4){
     position: absolute;
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1065.5vh;
-    left: 109vh;
+    top: 39.5vh;
+    left: 49vw;
 }
 
-body footer section>div:nth-child(2)>hr{
+body footer div>div:nth-child(2)>nav>ul>li:nth-child(5){
+    position: absolute;
+    color: #494949;
+    font-family: Inter;
+    font-size: 20px;
+    top: 47.5vh;
+    left: 49vw;
+}
+
+body footer div>div:nth-child(2)>hr{
     position: absolute;
     width: 0.001vh;
     height: 45vh;
-    top: 1025vh;
-    left: 147vh;
+    top: 6vh;
+    right: 31.5vw;
 }
 
-body footer section>div:nth-child(3)>h1{
+body footer div>div:nth-child(3)>h1{
     color: #ffffff;
     font-family: 'Catamaran';
     font-size: 1.5em;
@@ -1434,78 +1435,70 @@ body footer section>div:nth-child(3)>h1{
     line-height: normal;
     position: absolute;
     margin: auto;
-    left: 163vh;
-    top: 1030vh;
+    left: 73vw;
+    top: 7vh;
 }
 
-body footer section>div:nth-child(3)>h2{
+body footer div>div:nth-child(3)>h2{
     color: #ffffff;
     font-family: 'Catamaran';
     font-size: 1em;
+    width: 23vh;
     font-style: normal;
-    font-weight: 700;
     line-height: normal;
     position: absolute;
     margin: auto;
-    left: 172vh;
-    top: 1041vh;
+    left: 78vw;
+    top: 15vh;
 }
 
-body footer section>div:nth-child(3)>h3{
+body footer div>div:nth-child(3)>h3{
     color: #ffffff;
     font-family: 'Catamaran';
     font-size: 1em;
+    width: 23vh;
     font-style: normal;
-    font-weight: 700;
     line-height: normal;
     position: absolute;
     margin: auto;
-    left: 173vh;
-    top: 1052vh;
+    left: 78vw;
+    top: 25vh;
 }
 
-body footer section>div:nth-child(3)>h4{
+body footer div>div:nth-child(3)>h4{
     color: #ffffff;
     font-family: 'Catamaran';
     font-size: 1em;
+    width: 23vh;
     font-style: normal;
-    font-weight: 700;
     line-height: normal;
     position: absolute;
     margin: auto;
-    left: 172vh;
-    top: 1063vh;
+    left: 78vw;
+    top: 35vh;
 }
 
 
 #facebooklogo{
     width: 3%;
     position: absolute;
-    left: 72.7vw;
-    top: 1040vh;
+    left: 73.7vw;
+    top: 15vh;
     margin: auto;
 }
 
 #instergramlogo{
     width: 3%;
     position: absolute;
-    left: 73vw;
-    top: 1051vh;
+    left: 73.7vw;
+    top: 25vh;
     margin: auto;
 }
 
 #linkedInlogo{
     width: 3%;
     position: absolute;
-    left: 73vw;
-    top: 1062vh;
+    left: 73.7vw;
+    top: 35vh;
     margin: auto;
 }
-
-
-
-
-
-
-
-
