--- a/assets/css/Responsive425px/section2.css
+++ b/assets/css/Responsive425px/section2.css
@@ -6,6 +6,7 @@
         width: 71vw;
         padding-left: 14vw;
         padding-right: 14vw;
+        left: 8vw;
     }
 
     #section4MyImage2 {
