--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -519,10 +519,11 @@ section:nth-child(4){
     padding-right: 14vw;
 }
 
-section:nth-child(4)>div:nth-child(2)>svg{
+section:nth-child(4)>div:nth-child(2)>img{
     position: relative;
-    top: 0;
-    width: 95%;
+    top: 11vh;
+    width: 99%;
+    right: 2vw;
 }
 
 section:nth-child(4)>div:nth-child(3)>div:nth-child(1)>h1{
