--- a/assets/css/Responsive425px/section1.css
+++ b/assets/css/Responsive425px/section1.css
@@ -8,11 +8,11 @@
     }
 
     body main section:first-child>div:nth-child(2)>img {
-        position: absolute;
         left: 0vw;
         top: -8vh;
         height: 100vh;
-        width: 99.18vw;
+        width: 100%;
+        position: relative;
     }
 
     body main section:first-child>div:nth-child(3)>img {
