--- a/assets/css/Responsive320px/section2.css
+++ b/assets/css/Responsive320px/section2.css
@@ -1,7 +1,57 @@
 @media all and (max-width: 320px) {
 
 
-    section:nth-child(2) > div {
-        top: 86vw;
+    section:nth-child(2) {
+        position: relative;
+        height: 105vh;
+        width: 71vw;
+        padding-left: 14vw;
+        padding-right: 14vw;
+        right: 9vw;
     }
+
+    #section4MyImage2 {
+        width: 45.5%;
+        left: 38vw;
+        top: 5vh;
+    }
+
+    section:nth-child(2)>div {
+        height: 26vh;
+        width: 35vw;
+        top: 85vw;
+        right: 26vw;
+    }
+
+    section:nth-child(2)>div>h5 {
+        width: 23vw;
+        bottom: 9vh;
+        position: relative;
+        font-size: 4.5vw;
+        left: 13vw;
+    }
+
+    section:nth-child(2)>div>h1 {
+        top: -6vh;
+        text-align: center;
+        width: 44vw;
+        font-size: 5vw;
+    }
+
+    section:nth-child(2)>div>h3 {
+        width: 63vw;
+        text-align: center;
+        font-size: 3vw;
+        top: 4vh;
+        left: -9vw;
+    }
+    section:nth-child(2)>div>img:first-child {
+        top: 25vh;
+        width: 67%;
+    }
+    section:nth-child(2)>div>img:nth-child(2) {
+        top: 25vh;
+        width: 106%;
+    }
+
 }
