--- a/assets/css/Responsive425px/section1.css
+++ b/assets/css/Responsive425px/section1.css
@@ -1,4 +1,4 @@
-@media all and (max-width: 425px) {
+@media all and (max-width: 425px) and (min-width:320px){
     header{
         display: none;
     }
